--- a/ETL .ipynb
+++ b/ETL .ipynb
@@ -1761,7 +1761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1828,7 +1828,7 @@
        "4                           Ecuador               155.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1840,7 +1840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1956,7 +1956,7 @@
        "4             263               133              97  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1999,9 +1999,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pythondata] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-pythondata-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2013,7 +2013,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
