--- a/ETL .ipynb
+++ b/ETL .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +970,7 @@
        "49                 437           Silent  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,34 +984,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "suicide_df_2016 = suicide_df.loc[suicide_df['year']==2016]\n",
     "suicide_df_2016 = suicide_df_2016.drop(['country-year','sex'], axis=1)\n",
     "suicide_df_2016 = suicide_df_2016.groupby(['country'])\n",
-    "suicide_df_2016 = suicide_df_2016['suicides_no'].sum()"
+    "suicide_df_2016 = suicide_df_2016['suicides_no'].sum()\n",
+    "suicide_df_2016 = pd.DataFrame(suicide_df_2016).reset_index()\n",
+    "suicide_df_2016.columns = ['Country', 'Suicide count']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Suicide count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Armenia</td>\n",
+       "      <td>67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Austria</td>\n",
+       "      <td>1201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Croatia</td>\n",
+       "      <td>683</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Cyprus</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Czech Republic</td>\n",
+       "      <td>1318</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "country\n",
-       "Armenia             67\n",
-       "Austria           1201\n",
-       "Croatia            683\n",
-       "Cyprus              36\n",
-       "Czech Republic    1318\n",
-       "Name: suicides_no, dtype: int64"
+       "          Country  Suicide count\n",
+       "0         Armenia             67\n",
+       "1         Austria           1201\n",
+       "2         Croatia            683\n",
+       "3          Cyprus             36\n",
+       "4  Czech Republic           1318"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1029,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2662,7 +2716,7 @@
        "[56 rows x 30 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2676,7 +2730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -2745,7 +2799,7 @@
        "4                           Ecuador    155.0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2757,7 +2811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2824,7 +2878,7 @@
        "4                           Ecuador               155.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2836,7 +2890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -2954,7 +3008,7 @@
        "4             263               133              97  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2968,7 +3022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2977,7 +3031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -3081,7 +3135,7 @@
        "4               133              97  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
