--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -2,24 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from sqlalchemy import create_engine"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Eliza's Section"
+    "from sqlalchemy import create_engine\n",
+    "from config import password"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +964,7 @@
        "49                 437           Silent  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,34 +978,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "suicide_df_2016 = suicide_df.loc[suicide_df['year']==2016]\n",
     "suicide_df_2016 = suicide_df_2016.drop(['country-year','sex'], axis=1)\n",
     "suicide_df_2016 = suicide_df_2016.groupby(['country'])\n",
-    "suicide_df_2016 = suicide_df_2016['suicides_no'].sum()"
+    "suicide_df_2016 = suicide_df_2016['suicides_no'].sum()\n",
+    "suicide_df_2016 = pd.DataFrame(suicide_df_2016).reset_index()\n",
+    "suicide_df_2016.columns = ['country', 'suicidecount']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>suicidecount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Armenia</td>\n",
+       "      <td>67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Austria</td>\n",
+       "      <td>1201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Croatia</td>\n",
+       "      <td>683</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Cyprus</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Czech Republic</td>\n",
+       "      <td>1318</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "country\n",
-       "Armenia             67\n",
-       "Austria           1201\n",
-       "Croatia            683\n",
-       "Cyprus              36\n",
-       "Czech Republic    1318\n",
-       "Name: suicides_no, dtype: int64"
+       "          country  suicidecount\n",
+       "0         Armenia            67\n",
+       "1         Austria          1201\n",
+       "2         Croatia           683\n",
+       "3          Cyprus            36\n",
+       "4  Czech Republic          1318"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1021,15 +1069,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Lora's Section"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -2662,7 +2703,7 @@
        "[56 rows x 30 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2676,7 +2717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 67,
    "metadata": {
     "scrolled": true
    },
@@ -2745,7 +2786,7 @@
        "4                           Ecuador    155.0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2757,7 +2798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -2781,8 +2822,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Coffee_Consumption</th>\n",
+       "      <th>country</th>\n",
+       "      <th>coffee_consumption</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2816,7 +2857,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                            Country  Coffee_Consumption\n",
+       "                            country  coffee_consumption\n",
        "0                            Angola                30.0\n",
        "1  Bolivia (Plurinational State of)                57.0\n",
        "2                            Brazil             21225.0\n",
@@ -2824,19 +2865,19 @@
        "4                           Ecuador               155.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "coffee_df_2016.rename(columns={\"domestic_consumption\" : \"Country\", \"2016\" : \"Coffee_Consumption\"}, inplace=True)\n",
+    "coffee_df_2016.rename(columns={\"domestic_consumption\" : \"country\", \"2016\" : \"coffee_consumption\"}, inplace=True)\n",
     "coffee_df_2016.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 69,
    "metadata": {
     "scrolled": true
    },
@@ -2954,7 +2995,7 @@
        "4             263               133              97  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2968,16 +3009,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "HappinessAlcohol_df = HappinessAlcohol_df.drop(['Region','Hemisphere'],axis=1)"
+    "HappinessAlcohol_df = HappinessAlcohol_df.drop(['Region','Hemisphere'],axis=1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HappinessAlcohol_df = HappinessAlcohol_df.rename(columns={'Country':'country','HappinessScore': \"happinessscore\",\n",
+    "                                                'HDI':'hdi','GDP_PerCapita':'gdp_percapita','Beer_PerCapita':'beer_percapita',\n",
+    "                                                'Spirit_PerCapita':'spirit_percapita','Wine_PerCapita':'wine_percapita'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -3001,13 +3053,13 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Country</th>\n",
-       "      <th>HappinessScore</th>\n",
-       "      <th>HDI</th>\n",
-       "      <th>GDP_PerCapita</th>\n",
-       "      <th>Beer_PerCapita</th>\n",
-       "      <th>Spirit_PerCapita</th>\n",
-       "      <th>Wine_PerCapita</th>\n",
+       "      <th>country</th>\n",
+       "      <th>happinessscore</th>\n",
+       "      <th>hdi</th>\n",
+       "      <th>gdp_percapita</th>\n",
+       "      <th>beer_percapita</th>\n",
+       "      <th>spirit_percapita</th>\n",
+       "      <th>wine_percapita</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -3066,14 +3118,14 @@
        "</div>"
       ],
       "text/plain": [
-       "       Country  HappinessScore  HDI  GDP_PerCapita  Beer_PerCapita  \\\n",
+       "       country  happinessscore  hdi  gdp_percapita  beer_percapita  \\\n",
        "0      Denmark           7.526  928         53.579             224   \n",
        "1  Switzerland           7.509  943         79.866             185   \n",
        "2      Iceland           7.501  933         60.530             233   \n",
        "3       Norway           7.498  951         70.890             169   \n",
        "4      Finland           7.413  918         43.433             263   \n",
        "\n",
-       "   Spirit_PerCapita  Wine_PerCapita  \n",
+       "   spirit_percapita  wine_percapita  \n",
        "0                81             278  \n",
        "1               100             280  \n",
        "2                61              78  \n",
@@ -3081,7 +3133,7 @@
        "4               133              97  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3091,24 +3143,71 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 73,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "#### Stephen's Section"
+    "conn = f'postgresql://postgres:{password}@localhost:5432/ETL'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-06-12 13:36:46,562 INFO sqlalchemy.engine.base.Engine select version()\n",
+      "2021-06-12 13:36:46,563 INFO sqlalchemy.engine.base.Engine {}\n",
+      "2021-06-12 13:36:46,564 INFO sqlalchemy.engine.base.Engine select current_schema()\n",
+      "2021-06-12 13:36:46,564 INFO sqlalchemy.engine.base.Engine {}\n",
+      "2021-06-12 13:36:46,566 INFO sqlalchemy.engine.base.Engine SELECT CAST('test plain returns' AS VARCHAR(60)) AS anon_1\n",
+      "2021-06-12 13:36:46,566 INFO sqlalchemy.engine.base.Engine {}\n",
+      "2021-06-12 13:36:46,567 INFO sqlalchemy.engine.base.Engine SELECT CAST('test unicode returns' AS VARCHAR(60)) AS anon_1\n",
+      "2021-06-12 13:36:46,568 INFO sqlalchemy.engine.base.Engine {}\n",
+      "2021-06-12 13:36:46,569 INFO sqlalchemy.engine.base.Engine show standard_conforming_strings\n",
+      "2021-06-12 13:36:46,569 INFO sqlalchemy.engine.base.Engine {}\n"
+     ]
+    }
+   ],
+   "source": [
+    "engine = create_engine(conn, echo=True)\n",
+    "sqlite_connection = engine.connect()"
+   ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 76,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-06-12 13:37:02,828 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
+      "2021-06-12 13:37:02,828 INFO sqlalchemy.engine.base.Engine {'name': 'suicide_df_2016'}\n",
+      "2021-06-12 13:37:02,830 INFO sqlalchemy.engine.base.Engine BEGIN (implicit)\n",
+      "2021-06-12 13:37:02,830 INFO sqlalchemy.engine.base.Engine INSERT INTO suicide_df_2016 (country, suicidecount) VALUES (%(country)s, %(suicidecount)s)\n",
+      "2021-06-12 13:37:02,830 INFO sqlalchemy.engine.base.Engine ({'country': 'Armenia', 'suicidecount': 67}, {'country': 'Austria', 'suicidecount': 1201}, {'country': 'Croatia', 'suicidecount': 683}, {'country': 'Cyprus', 'suicidecount': 36}, {'country': 'Czech Republic', 'suicidecount': 1318}, {'country': 'Grenada', 'suicidecount': 0}, {'country': 'Hungary', 'suicidecount': 1761}, {'country': 'Iceland', 'suicidecount': 40}  ... displaying 10 of 16 total bound parameter sets ...  {'country': 'Sweden', 'suicidecount': 1130}, {'country': 'Thailand', 'suicidecount': 4117})\n",
+      "2021-06-12 13:37:02,835 INFO sqlalchemy.engine.base.Engine COMMIT\n",
+      "2021-06-12 13:37:02,841 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
+      "2021-06-12 13:37:02,842 INFO sqlalchemy.engine.base.Engine {'name': 'happinessalcohol_df'}\n",
+      "2021-06-12 13:37:02,844 INFO sqlalchemy.engine.base.Engine BEGIN (implicit)\n",
+      "2021-06-12 13:37:02,847 INFO sqlalchemy.engine.base.Engine INSERT INTO happinessalcohol_df (country, happinessscore, hdi, gdp_percapita, beer_percapita, spirit_percapita, wine_percapita) VALUES (%(country)s, %(happinessscore)s, %(hdi)s, %(gdp_percapita)s, %(beer_percapita)s, %(spirit_percapita)s, %(wine_percapita)s)\n",
+      "2021-06-12 13:37:02,848 INFO sqlalchemy.engine.base.Engine ({'country': 'Denmark', 'happinessscore': 7.526, 'hdi': 928, 'gdp_percapita': 53.57899999999999, 'beer_percapita': 224, 'spirit_percapita': 81, 'wine_percapita': 278}, {'country': 'Switzerland', 'happinessscore': 7.5089999999999995, 'hdi': 943, 'gdp_percapita': 79.866, 'beer_percapita': 185, 'spirit_percapita': 100, 'wine_percapita': 280}, {'country': 'Iceland', 'happinessscore': 7.501, 'hdi': 933, 'gdp_percapita': 60.53, 'beer_percapita': 233, 'spirit_percapita': 61, 'wine_percapita': 78}, {'country': 'Norway', 'happinessscore': 7.497999999999999, 'hdi': 951, 'gdp_percapita': 70.89, 'beer_percapita': 169, 'spirit_percapita': 71, 'wine_percapita': 129}, {'country': 'Finland', 'happinessscore': 7.412999999999999, 'hdi': 918, 'gdp_percapita': 43.433, 'beer_percapita': 263, 'spirit_percapita': 133, 'wine_percapita': 97}, {'country': 'Canada', 'happinessscore': 7.404, 'hdi': 922, 'gdp_percapita': 42.349, 'beer_percapita': 240, 'spirit_percapita': 122, 'wine_percapita': 100}, {'country': 'Netherlands', 'happinessscore': 7.3389999999999995, 'hdi': 928, 'gdp_percapita': 45.638000000000005, 'beer_percapita': 251, 'spirit_percapita': 88, 'wine_percapita': 190}, {'country': 'New Zealand', 'happinessscore': 7.334, 'hdi': 915, 'gdp_percapita': 40.332, 'beer_percapita': 203, 'spirit_percapita': 79, 'wine_percapita': 175}  ... displaying 10 of 122 total bound parameter sets ...  {'country': 'Togo', 'happinessscore': 3.303, 'hdi': 500, 'gdp_percapita': 577.0, 'beer_percapita': 36, 'spirit_percapita': 2, 'wine_percapita': 19}, {'country': 'Syria', 'happinessscore': 3.069, 'hdi': 536, 'gdp_percapita': 2.0580000000000003, 'beer_percapita': 5, 'spirit_percapita': 35, 'wine_percapita': 16})\n",
+      "2021-06-12 13:37:02,868 INFO sqlalchemy.engine.base.Engine COMMIT\n"
+     ]
+    }
+   ],
    "source": [
-    "#### Nathan's Section"
+    "coffee_df_2016.to_sql('coffee_df_2016', con=engine, if_exists='append', index=False)\n",
+    "\n",
+    "suicide_df_2016.to_sql('suicide_df_2016', con=engine, if_exists='append', index=False)\n",
+    "\n",
+    "HappinessAlcohol_df.to_sql('happinessalcohol_df', con=engine, if_exists='append', index=False)"
    ]
   },
   {
