--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -13,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +966,7 @@
        "49                 437           Silent  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -978,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +1061,7 @@
        "4  Czech Republic          1318"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1070,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2703,7 +2705,7 @@
        "[56 rows x 30 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2717,7 +2719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -2786,7 +2788,7 @@
        "4                           Ecuador    155.0"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2798,7 +2800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2865,7 +2867,7 @@
        "4                           Ecuador               155.0"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2877,7 +2879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -2995,7 +2997,7 @@
        "4             263               133              97  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3009,7 +3011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3018,7 +3020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3029,7 +3031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -3133,7 +3135,7 @@
        "4               133              97  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3144,7 +3146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3153,23 +3155,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-12 13:36:46,562 INFO sqlalchemy.engine.base.Engine select version()\n",
-      "2021-06-12 13:36:46,563 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2021-06-12 13:36:46,564 INFO sqlalchemy.engine.base.Engine select current_schema()\n",
-      "2021-06-12 13:36:46,564 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2021-06-12 13:36:46,566 INFO sqlalchemy.engine.base.Engine SELECT CAST('test plain returns' AS VARCHAR(60)) AS anon_1\n",
-      "2021-06-12 13:36:46,566 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2021-06-12 13:36:46,567 INFO sqlalchemy.engine.base.Engine SELECT CAST('test unicode returns' AS VARCHAR(60)) AS anon_1\n",
-      "2021-06-12 13:36:46,568 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2021-06-12 13:36:46,569 INFO sqlalchemy.engine.base.Engine show standard_conforming_strings\n",
-      "2021-06-12 13:36:46,569 INFO sqlalchemy.engine.base.Engine {}\n"
+      "2021-06-15 19:05:13,892 INFO sqlalchemy.engine.base.Engine select version()\n",
+      "2021-06-15 19:05:13,895 INFO sqlalchemy.engine.base.Engine {}\n",
+      "2021-06-15 19:05:13,897 INFO sqlalchemy.engine.base.Engine select current_schema()\n",
+      "2021-06-15 19:05:13,898 INFO sqlalchemy.engine.base.Engine {}\n",
+      "2021-06-15 19:05:13,900 INFO sqlalchemy.engine.base.Engine SELECT CAST('test plain returns' AS VARCHAR(60)) AS anon_1\n",
+      "2021-06-15 19:05:13,900 INFO sqlalchemy.engine.base.Engine {}\n",
+      "2021-06-15 19:05:13,901 INFO sqlalchemy.engine.base.Engine SELECT CAST('test unicode returns' AS VARCHAR(60)) AS anon_1\n",
+      "2021-06-15 19:05:13,902 INFO sqlalchemy.engine.base.Engine {}\n",
+      "2021-06-15 19:05:13,902 INFO sqlalchemy.engine.base.Engine show standard_conforming_strings\n",
+      "2021-06-15 19:05:13,902 INFO sqlalchemy.engine.base.Engine {}\n"
      ]
     }
    ],
@@ -3180,25 +3182,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-12 13:37:02,828 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2021-06-12 13:37:02,828 INFO sqlalchemy.engine.base.Engine {'name': 'suicide_df_2016'}\n",
-      "2021-06-12 13:37:02,830 INFO sqlalchemy.engine.base.Engine BEGIN (implicit)\n",
-      "2021-06-12 13:37:02,830 INFO sqlalchemy.engine.base.Engine INSERT INTO suicide_df_2016 (country, suicidecount) VALUES (%(country)s, %(suicidecount)s)\n",
-      "2021-06-12 13:37:02,830 INFO sqlalchemy.engine.base.Engine ({'country': 'Armenia', 'suicidecount': 67}, {'country': 'Austria', 'suicidecount': 1201}, {'country': 'Croatia', 'suicidecount': 683}, {'country': 'Cyprus', 'suicidecount': 36}, {'country': 'Czech Republic', 'suicidecount': 1318}, {'country': 'Grenada', 'suicidecount': 0}, {'country': 'Hungary', 'suicidecount': 1761}, {'country': 'Iceland', 'suicidecount': 40}  ... displaying 10 of 16 total bound parameter sets ...  {'country': 'Sweden', 'suicidecount': 1130}, {'country': 'Thailand', 'suicidecount': 4117})\n",
-      "2021-06-12 13:37:02,835 INFO sqlalchemy.engine.base.Engine COMMIT\n",
-      "2021-06-12 13:37:02,841 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2021-06-12 13:37:02,842 INFO sqlalchemy.engine.base.Engine {'name': 'happinessalcohol_df'}\n",
-      "2021-06-12 13:37:02,844 INFO sqlalchemy.engine.base.Engine BEGIN (implicit)\n",
-      "2021-06-12 13:37:02,847 INFO sqlalchemy.engine.base.Engine INSERT INTO happinessalcohol_df (country, happinessscore, hdi, gdp_percapita, beer_percapita, spirit_percapita, wine_percapita) VALUES (%(country)s, %(happinessscore)s, %(hdi)s, %(gdp_percapita)s, %(beer_percapita)s, %(spirit_percapita)s, %(wine_percapita)s)\n",
-      "2021-06-12 13:37:02,848 INFO sqlalchemy.engine.base.Engine ({'country': 'Denmark', 'happinessscore': 7.526, 'hdi': 928, 'gdp_percapita': 53.57899999999999, 'beer_percapita': 224, 'spirit_percapita': 81, 'wine_percapita': 278}, {'country': 'Switzerland', 'happinessscore': 7.5089999999999995, 'hdi': 943, 'gdp_percapita': 79.866, 'beer_percapita': 185, 'spirit_percapita': 100, 'wine_percapita': 280}, {'country': 'Iceland', 'happinessscore': 7.501, 'hdi': 933, 'gdp_percapita': 60.53, 'beer_percapita': 233, 'spirit_percapita': 61, 'wine_percapita': 78}, {'country': 'Norway', 'happinessscore': 7.497999999999999, 'hdi': 951, 'gdp_percapita': 70.89, 'beer_percapita': 169, 'spirit_percapita': 71, 'wine_percapita': 129}, {'country': 'Finland', 'happinessscore': 7.412999999999999, 'hdi': 918, 'gdp_percapita': 43.433, 'beer_percapita': 263, 'spirit_percapita': 133, 'wine_percapita': 97}, {'country': 'Canada', 'happinessscore': 7.404, 'hdi': 922, 'gdp_percapita': 42.349, 'beer_percapita': 240, 'spirit_percapita': 122, 'wine_percapita': 100}, {'country': 'Netherlands', 'happinessscore': 7.3389999999999995, 'hdi': 928, 'gdp_percapita': 45.638000000000005, 'beer_percapita': 251, 'spirit_percapita': 88, 'wine_percapita': 190}, {'country': 'New Zealand', 'happinessscore': 7.334, 'hdi': 915, 'gdp_percapita': 40.332, 'beer_percapita': 203, 'spirit_percapita': 79, 'wine_percapita': 175}  ... displaying 10 of 122 total bound parameter sets ...  {'country': 'Togo', 'happinessscore': 3.303, 'hdi': 500, 'gdp_percapita': 577.0, 'beer_percapita': 36, 'spirit_percapita': 2, 'wine_percapita': 19}, {'country': 'Syria', 'happinessscore': 3.069, 'hdi': 536, 'gdp_percapita': 2.0580000000000003, 'beer_percapita': 5, 'spirit_percapita': 35, 'wine_percapita': 16})\n",
-      "2021-06-12 13:37:02,868 INFO sqlalchemy.engine.base.Engine COMMIT\n"
+      "2021-06-15 19:05:15,111 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
+      "2021-06-15 19:05:15,111 INFO sqlalchemy.engine.base.Engine {'name': 'coffee_df_2016'}\n",
+      "2021-06-15 19:05:15,114 INFO sqlalchemy.engine.base.Engine BEGIN (implicit)\n",
+      "2021-06-15 19:05:15,115 INFO sqlalchemy.engine.base.Engine INSERT INTO coffee_df_2016 (country, coffee_consumption) VALUES (%(country)s, %(coffee_consumption)s)\n",
+      "2021-06-15 19:05:15,115 INFO sqlalchemy.engine.base.Engine ({'country': 'Angola', 'coffee_consumption': 30.0}, {'country': 'Bolivia (Plurinational State of)', 'coffee_consumption': 57.0}, {'country': 'Brazil', 'coffee_consumption': 21225.0}, {'country': 'Burundi', 'coffee_consumption': 2.0}, {'country': 'Ecuador', 'coffee_consumption': 155.0}, {'country': 'Indonesia', 'coffee_consumption': 4650.0}, {'country': 'Madagascar', 'coffee_consumption': 360.0}, {'country': 'Malawi', 'coffee_consumption': 1.0}  ... displaying 10 of 56 total bound parameter sets ...  {'country': 'Viet Nam', 'coffee_consumption': 2400.0}, {'country': 'Yemen', 'coffee_consumption': 100.0})\n",
+      "2021-06-15 19:05:15,125 INFO sqlalchemy.engine.base.Engine COMMIT\n",
+      "2021-06-15 19:05:15,129 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
+      "2021-06-15 19:05:15,129 INFO sqlalchemy.engine.base.Engine {'name': 'suicide_df_2016'}\n",
+      "2021-06-15 19:05:15,131 INFO sqlalchemy.engine.base.Engine BEGIN (implicit)\n",
+      "2021-06-15 19:05:15,132 INFO sqlalchemy.engine.base.Engine INSERT INTO suicide_df_2016 (country, suicidecount) VALUES (%(country)s, %(suicidecount)s)\n",
+      "2021-06-15 19:05:15,132 INFO sqlalchemy.engine.base.Engine ({'country': 'Armenia', 'suicidecount': 67}, {'country': 'Austria', 'suicidecount': 1201}, {'country': 'Croatia', 'suicidecount': 683}, {'country': 'Cyprus', 'suicidecount': 36}, {'country': 'Czech Republic', 'suicidecount': 1318}, {'country': 'Grenada', 'suicidecount': 0}, {'country': 'Hungary', 'suicidecount': 1761}, {'country': 'Iceland', 'suicidecount': 40}  ... displaying 10 of 16 total bound parameter sets ...  {'country': 'Sweden', 'suicidecount': 1130}, {'country': 'Thailand', 'suicidecount': 4117})\n",
+      "2021-06-15 19:05:15,137 INFO sqlalchemy.engine.base.Engine COMMIT\n",
+      "2021-06-15 19:05:15,143 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
+      "2021-06-15 19:05:15,144 INFO sqlalchemy.engine.base.Engine {'name': 'happinessalcohol_df'}\n",
+      "2021-06-15 19:05:15,146 INFO sqlalchemy.engine.base.Engine BEGIN (implicit)\n",
+      "2021-06-15 19:05:15,148 INFO sqlalchemy.engine.base.Engine INSERT INTO happinessalcohol_df (country, happinessscore, hdi, gdp_percapita, beer_percapita, spirit_percapita, wine_percapita) VALUES (%(country)s, %(happinessscore)s, %(hdi)s, %(gdp_percapita)s, %(beer_percapita)s, %(spirit_percapita)s, %(wine_percapita)s)\n",
+      "2021-06-15 19:05:15,149 INFO sqlalchemy.engine.base.Engine ({'country': 'Denmark', 'happinessscore': 7.526, 'hdi': 928, 'gdp_percapita': 53.57899999999999, 'beer_percapita': 224, 'spirit_percapita': 81, 'wine_percapita': 278}, {'country': 'Switzerland', 'happinessscore': 7.5089999999999995, 'hdi': 943, 'gdp_percapita': 79.866, 'beer_percapita': 185, 'spirit_percapita': 100, 'wine_percapita': 280}, {'country': 'Iceland', 'happinessscore': 7.501, 'hdi': 933, 'gdp_percapita': 60.53, 'beer_percapita': 233, 'spirit_percapita': 61, 'wine_percapita': 78}, {'country': 'Norway', 'happinessscore': 7.497999999999999, 'hdi': 951, 'gdp_percapita': 70.89, 'beer_percapita': 169, 'spirit_percapita': 71, 'wine_percapita': 129}, {'country': 'Finland', 'happinessscore': 7.412999999999999, 'hdi': 918, 'gdp_percapita': 43.433, 'beer_percapita': 263, 'spirit_percapita': 133, 'wine_percapita': 97}, {'country': 'Canada', 'happinessscore': 7.404, 'hdi': 922, 'gdp_percapita': 42.349, 'beer_percapita': 240, 'spirit_percapita': 122, 'wine_percapita': 100}, {'country': 'Netherlands', 'happinessscore': 7.3389999999999995, 'hdi': 928, 'gdp_percapita': 45.638000000000005, 'beer_percapita': 251, 'spirit_percapita': 88, 'wine_percapita': 190}, {'country': 'New Zealand', 'happinessscore': 7.334, 'hdi': 915, 'gdp_percapita': 40.332, 'beer_percapita': 203, 'spirit_percapita': 79, 'wine_percapita': 175}  ... displaying 10 of 122 total bound parameter sets ...  {'country': 'Togo', 'happinessscore': 3.303, 'hdi': 500, 'gdp_percapita': 577.0, 'beer_percapita': 36, 'spirit_percapita': 2, 'wine_percapita': 19}, {'country': 'Syria', 'happinessscore': 3.069, 'hdi': 536, 'gdp_percapita': 2.0580000000000003, 'beer_percapita': 5, 'spirit_percapita': 35, 'wine_percapita': 16})\n",
+      "2021-06-15 19:05:15,169 INFO sqlalchemy.engine.base.Engine COMMIT\n"
      ]
     }
    ],
@@ -3209,6 +3217,13 @@
     "\n",
     "HappinessAlcohol_df.to_sql('happinessalcohol_df', con=engine, if_exists='append', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
